# cpp-closest-point-on-mesh

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen
cmake-modules/: FindGLFW.cmake  Findassimp.cmake
docs/: annotated_dup.js  classcore_1_1ClosestPointQuery-members.html  classcore_1_1ClosestPointQuery.html  classcore_1_1Mesh.js  classcore_1_1MeshPointCloud-members.html  classcore_1_1RasterizedMesh-members.html  classcore_1_1RasterizedMesh.html  classcore_1_1RasterizedMesh.js  classcore_1_1Scene.js  classes.html  classgui_1_1MainWindow.html  classgui_1_1MainWindow.js  classgui_1_1OrbitCamera-members.html  classgui_1_1OrbitCamera.html  classgui_1_1OrbitCamera.js  classgui_1_1RasterizedPoints.js  classgui_1_1Shader.html  classgui_1_1Shader.js  closest__point__query_8cpp.html  closest__point__query_8h.html  closest__point__query_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_99d0482cf009f9d97a0877749b817f19.html  dir_aebb8dcc11953d78e620bbef0b9e2183.js  file__system_8h.html  file__system_8h.js  file__system_8h_source.html  functions_func.html  globals.html  mainwindow_8h.html  math_8h.html  math_8h.js  math_8h_source.html  mesh_8cpp.html  mesh__point__cloud_8cpp.html  mesh__point__cloud_8h.html  mesh__point__cloud_8h_source.html  namespacecore.js  namespacemembers_func.html  (+19 more)
docs/html/: annotated.html  classcore_1_1ClosestPointQuery.js  classcore_1_1Mesh-members.html  classcore_1_1Mesh.html  classcore_1_1MeshPointCloud.html  classcore_1_1MeshPointCloud.js  classcore_1_1Scene-members.html  classcore_1_1Scene.html  classgui_1_1MainWindow-members.html  classgui_1_1RasterizedPoints-members.html  classgui_1_1RasterizedPoints.html  classgui_1_1Shader-members.html  dir_99d0482cf009f9d97a0877749b817f19.js  dir_aebb8dcc11953d78e620bbef0b9e2183.html  files.html  functions.html  functions_vars.html  globals_func.html  index.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h_source.html  menudata.js  mesh_8h.html  mesh_8h_source.html  namespacecore.html  namespacegui.html  namespacegui.js  namespacemembers.html  namespaces_dup.js  orbit__camera_8cpp.html  rasterized__mesh_8h.html  rasterized__mesh_8h_source.html  rasterized__points_8h.html  scene_8h.html  scene_8h_source.html  string__utils_8h.html  string__utils_8h_source.html  structcore_1_1Mesh_1_1Vertex-members.html  structcore_1_1Mesh_1_1Vertex.html  (+3 more)
docs/html/search/: all_3.js  all_5.js  all_6.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_a.js  namespaces_1.js  variables_2.js
docs/latex/: annotated.tex  classcore_1_1ClosestPointQuery.tex  classcore_1_1Mesh.tex  classcore_1_1MeshPointCloud.tex  classcore_1_1RasterizedMesh.tex  classcore_1_1Scene.tex  classgui_1_1MainWindow.tex  classgui_1_1OrbitCamera.tex  classgui_1_1RasterizedPoints.tex  classgui_1_1Shader.tex  closest__point__query_8cpp.tex  closest__point__query_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_99d0482cf009f9d97a0877749b817f19.tex  dir_aebb8dcc11953d78e620bbef0b9e2183.tex  file__system_8h.tex  files.tex  main_8cpp.tex  mainwindow_8cpp.tex  mainwindow_8h.tex  math_8h.tex  mesh_8cpp.tex  mesh_8h.tex  mesh__point__cloud_8cpp.tex  mesh__point__cloud_8h.tex  namespacecore.tex  namespacegui.tex  namespaces.tex  orbit__camera_8cpp.tex  orbit__camera_8h.tex  rasterized__mesh_8cpp.tex  rasterized__mesh_8h.tex  rasterized__points_8cpp.tex  rasterized__points_8h.tex  refman.tex  scene_8cpp.tex  scene_8h.tex  scene__loader_8cpp.tex  scene__loader_8h.tex  shader_8cpp.tex  (+4 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_5.js  functions_1.js  functions_2.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js
resources/shaders/: facing_ratio.frag  facing_ratio.vert  point.frag  point.vert  solid.frag  solid.vert
src/core/: closest_point_query.cpp  closest_point_query.h  math.h  mesh.cpp  mesh.h  mesh_point_cloud.cpp  mesh_point_cloud.h  rasterized_mesh.cpp  rasterized_mesh.h  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h
src/gui/: file_system.h  gui.cpp  gui.h  main.cpp  mainwindow.cpp  mainwindow.h  orbit_camera.cpp  orbit_camera.h  rasterized_points.cpp  rasterized_points.h  shader.cpp  shader.h  string_utils.h
